# apex-keys-api

./: .env.example  .gitignore  .vercelignore  FRONTEND_API.md  README.md  dev.py  index.py  pyproject.toml  railway.toml  requirements.txt  schema.sql
app/: account_deletion.py  avatar_image.py  brasil_time.py  config.py  database.py  deps.py  dotenv_loader.py  email_service.py  igdb_service.py  live_draw_service.py  main.py  mercado_pago_service.py  models.py  mp_logging.py  pricing.py  ranking_me_service.py  ranking_top_service.py  reservation_service.py  schemas.py  security.py  uploadthing_client.py  utils.py
app/routes/: admin.py  auth.py  checkout.py  igdb.py  raffle_reservations.py  rankings.py  users.py  wallet.py  webhooks.py
docs/: FRONTEND_IGDB_E_YOUTUBE_MANUAL.txt
migrations/: README.md  add_featured_tier.sql  add_pix_key_and_avatar.sql  add_raffle_draw.sql  add_scheduled_live_draw.sql  add_steam_redemption_code.sql  add_ticket_payment_hold.sql  add_transaction_raffle_snapshot.sql  railway_legacy_to_current.sql
scripts/: add_raffle_igdb_columns.sql  apply_featured_tier_migration.py  apply_schema.py  bulk_raffles_catalog.example.json  bulk_raffles_catalog.json  create_admin.py  reset_and_apply_schema.py  reset_db.py  reset_db.sh  reset_db_schema.py  schema_reset.sql  seed_bulk_raffles.py  seed_test_data.py  test_endpoints.py
